social links: add function61

--- a/blog/_includes/social_links.html
+++ b/blog/_includes/social_links.html
@@ -1,5 +1,7 @@
 <div class="social-icons">
   <div class="left">
+    <a class="fa" href="https://function61.com/" title="My company">function61</a>
+
     {% if site.twitter_username %}
       <a class="fa fa-twitter" href="https://twitter.com/{{ site.twitter_username }}"></a>
     {% endif %}
