--- a/blog/_includes/header.html
+++ b/blog/_includes/header.html
@@ -1,7 +1,11 @@
 <header class="site-header px2 px-responsive">
   <div class="mt2 wrap">
     <div class="measure">
-      <a href="{{ site.baseurl }}/" class="site-title">{{ site.title }}</a>
+      <a href="{{ site.baseurl }}/" class="site-title">
+        {{ site.title }}
+        <br />
+        <span style="color: #e0e0e0;">{{ site.description }}</span>
+      </a>
       <nav class="site-nav">
         {% include navigation.html %}
 
