"Theme (</> on Github)" -> "Theme"

--- a/blog/_includes/footer.html
+++ b/blog/_includes/footer.html
@@ -3,7 +3,7 @@
     <small>
 		&copy; joonas.fi
     	<br />
-      Theme (&lt;/&gt; on <a target="_blank" href="https://github.com/johnotander/pixyll">Github</a>) by <a target="_blank" href="https://twitter.com/4lpine">@4lpine</a>.
+      <a target="_blank" href="https://github.com/johnotander/pixyll">Theme</a> by <a target="_blank" href="https://twitter.com/4lpine">@4lpine</a>.
     </small>
   </div>
 </footer>
