footer: add a few inspirational quotes

--- a/blog/_includes/footer.html
+++ b/blog/_includes/footer.html
@@ -1,9 +1,10 @@
 <footer class="center">
   <div class="measure">
     <small>
-		&copy; joonas.fi
-    	<br />
-      <a target="_blank" href="https://github.com/johnotander/pixyll">Theme</a> by <a target="_blank" href="https://twitter.com/4lpine">@4lpine</a>.
+		&copy; joonas.fi. <a target="_blank" href="https://github.com/johnotander/pixyll">Theme</a> by <a target="_blank" href="https://twitter.com/4lpine">@4lpine</a>.
+		<hr style="margin: 0.25rem" />
+		Fight for your dreams.<br />
+		Eagles fly alone while pigeons flock together.
     </small>
   </div>
 </footer>
