move signature to post_footer, add Twitter plug

--- a/blog/_includes/post_footer.html
+++ b/blog/_includes/post_footer.html
@@ -1,10 +1,7 @@
 <div class="py2 post-footer">
-  <img src="/images/me.jpeg" alt="John Otander" class="avatar" />
+	<hr />
+  <img src="{{ site.baseurl }}/signature.png" alt="signature" style="height: 55px;" />
   <p>
-    Pixyll is an open-source Jekyll theme that's built by <a href="http://johnotander.com">John Otander</a>.
-    When he's not writing code and building things, he likes to ski. A. Lot.
-  </p>
-  <p>
-    Follow him on <a href="https://twitter.com/4lpine">Twitter</a>.
+    If you like my writing, consider following me on <a href="https://twitter.com/{{ site.twitter_username }}">Twitter</a>. <span style="font-style: normal;">😍</span>
   </p>
 </div>
