--- a/blog/_includes/head.html
+++ b/blog/_includes/head.html
@@ -28,6 +28,7 @@
     <meta property="og:description" content="{% if page.description %}{{ page.description | xml_escape }}{% else %}{{ site.description | xml_escape }}{% endif %}">
     <meta property="og:url" content="{{ site.url }}{{ page.url }}">
     <meta property="og:site_name" content="{{ site.title | xml_escape }}">
+    <meta property="og:image" content="{{ site.url }}/images/me.jpg" />
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary" />
