--- a/blog/_includes/footer.html
+++ b/blog/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer class="center">
   <div class="measure">
     <small>
-		&copy; joonas.fi. <a target="_blank" href="https://github.com/johnotander/pixyll">Theme</a> by <a target="_blank" href="https://twitter.com/4lpine">@4lpine</a>.
+		&copy; joonas.fi. <a target="_blank" href="https://github.com/johnotander/pixyll">Theme</a> by <a target="_blank" href="https://johno.com/">@4lpine</a>.
 		<hr style="margin: 0.25rem" />
 		Fight for your dreams.<br />
 		Eagles fly alone while pigeons flock together.
