add "Thanks for reading!" to post footer

--- a/blog/_includes/post_footer.html
+++ b/blog/_includes/post_footer.html
@@ -1,7 +1,8 @@
 <div class="py2 post-footer">
 	<hr />
   <img src="{{ site.baseurl }}/signature.png" alt="signature" style="height: 55px;" />
+  <p>Thanks for reading! <span style="font-style: normal;">😍</span></p>
   <p>
-    If you like my writing, consider following me on <a href="https://twitter.com/{{ site.twitter_username }}">Twitter</a>. <span style="font-style: normal;">😍</span>
+    If you like my writing, consider following me on <a href="https://twitter.com/{{ site.twitter_username }}">Twitter</a>.
   </p>
 </div>
