fix URL of tag-view when coming from blog post

--- a/themes/cactus/layouts/posts/single.html
+++ b/themes/cactus/layouts/posts/single.html
@@ -35,7 +35,7 @@
             <i class="fas fa-archive"></i>
             {{ range $index, $value := .Params.categories }}
             {{ if gt $index 0 }} {{ print ", " }} {{ end }}
-            <a class="category-link" href="{{ "/categories/" | relLangURL }}{{ $value | urlize }}">{{ $value }}</a>
+            <a class="category-link" href="{{ "/categories/" | relLangURL }}{{ $value | urlize }}/">{{ $value }}</a>
             {{ end }}
         </div>
         {{ end }}
@@ -44,7 +44,7 @@
             <i class="fas fa-tag"></i>
             {{ range $index, $value := .Params.tags }}
             {{ if gt $index 0 }} {{ print ", " }} {{ end }}
-            <a class="tag-link" href="{{ "/tags/" | relLangURL }}{{ $value | urlize }}" rel="tag">{{ $value }}</a>
+            <a class="tag-link" href="{{ "/tags/" | relLangURL }}{{ $value | urlize }}/" rel="tag">{{ $value }}</a>
             {{ end }}
         </div>
         {{ end }}
