--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -20,3 +20,13 @@ p code, ul code, ol code {
 h3 {
 	text-decoration: none !important;
 }
+
+.alert-warning {
+	border: 1px solid rgba(241, 142, 6, 0.81);
+	background-color: rgba(220, 128, 1, 0.16);
+	box-shadow: 0px 0px 2px #ffb103;
+	color: #000000;
+	padding: 5px 5px 5px 10px;
+	margin-bottom: 16px;
+	border-radius: 3px;
+}
