--- a/themes/cactus/layouts/partials/announcement.html
+++ b/themes/cactus/layouts/partials/announcement.html
@@ -1,6 +1,6 @@
 <div class="alert-warning">
 	🚨
 	<a href="https://www.reuters.com/world/europe/icc-says-may-investigate-possible-war-crimes-after-russian-invasion-ukraine-2022-02-25/">Putin is a war criminal</a>.
-	<a href="https://www.dailymail.co.uk/news/article-10553849/Russian-tank-DELIBERATELY-crushes-car-driving-opposite-road-Ukraine-elderly-driver.html">Russians are deliberately killing civilians in Ukraine</a>.
+	<a href="https://arstechnica.com/science/2022/03/russia-attacked-ukrainian-hospitals-violating-humanitarian-law-who-says/">Russians are bombing hospitals</a>.
 	💔🇺🇦
 </div>
