--- a/themes/cactus/layouts/posts/single.html
+++ b/themes/cactus/layouts/posts/single.html
@@ -8,6 +8,10 @@
 
   <article class="post" itemscope itemtype="http://schema.org/BlogPosting">
     <header>
+    {{ if $.Params.header_image_alt }}
+      <img src="header.jpg" class="hero" alt="{{ $.Params.header_image_alt }}" />
+    {{end}}
+
       <h1 class="posttitle" itemprop="name headline">
         {{ .Title }}
       </h1>
